# ALSA_loopback

./: .gitignore  CMakeLists.txt  README.md  alsa.c  alsa.h  audiopacket.h  auto_receiver.c  codec.c  codec.h  duplex.c  duplex.h  jitter.c  jitter.h  loopback  loopback.c  main.c  main.h  ringbuffer.c  ringbuffer.h  udp.c  udp.h  udp_codec.c  udp_codec.h  udp_r.c  udp_s.c
denemeler/: 08_08_2025komple.jex  ap_deneme.c  ap_deneme.h  chatcodec.c  denem.c  deneme  loopback1  loopback1.c  recorder.c  recorder.h  sender.c  udp_r.c  udp_s
